--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Moonwalk
+title: VoxFox Blog!
 author: Abhinav Saxena
 url: https://www.abhinavsaxena.com/moonwalk # root address of the site
 description: > # description of the site (multiple lines allowed)
-  Moonwalk is a fast and elegant Jekyll theme with a clean dark mode. It comes with horizontal list (for navbar and footer), card list (for portfolio), and a generic vertical list. It is very easy to modify in case you want to build over it - please see _layouts/home.html to do that.
+  Сайт начинающего исследователя компьютерной безопасности. Здесь вы можете увидеть решения задач с таких платформ как HMV,HTB.THM и так далее...
 
 permalink: /:slug
 
