--- a/_data/home.yml
+++ b/_data/home.yml
@@ -9,18 +9,18 @@ navbar_entries:
     url: https://www.abhinav.co
 
 project_entries:
-  - title: Project 1
-    url: overview-post
-    desc: This is an example project, configured in _data/home.yml
+  - title: HACKMYVM
+    url: /hmv
+    desc: Врайтапы HMV
 
-  - title: Project 2
-    url: overview-post
-    desc: Projects are shown in card layout
+  - title: HackTheBox
+    url: /htb
+    desc: Врайтапы HTB
 
-  - title: Project 3
-    url: overview-post
-    desc: You can control visibility from _config.yml file
-
+  - title: Tools
+    url: /tools
+    desc: То что облегчает жизнь мне и возможно поможет вам
+    
   - title: Project 4
     url: overview-post
     desc: This project uses highlight markup, configured in _data/home.yml
