--- a/_data/home.yml
+++ b/_data/home.yml
@@ -5,8 +5,8 @@ navbar_entries:
   - title: blog
     url: blog
 
-  - title: website
-    url: https://www.abhinav.co
+#  - title: website
+#    url: https://www.abhinav.co
 
 project_entries:
   - title: HackMyVM
@@ -54,17 +54,17 @@ old_project_entries:
     desc: The better people know you, the better they collaborate
 
 footer_entries:
-  - title: abhinav's homepage
-    url: https://www.abhinav.co
+##  - title: abhinav's homepage
+##    url: https://www.abhinav.co
 
-  - title: twitter
-    url: https://twitter.com/abhinav
+##  - title: twitter
+##    url: https://twitter.com/abhinav
 
-  - title: github
-    url: https://github.com/abhinavs
+##  - title: github
+##    url: https://github.com/abhinavs
 
-  - title: feed
-    url: feed.xml
+##  - title: feed
+##    url: feed.xml
 
 misc_entries:
   - title: this is an example vertical list
