--- a/_data/home.yml
+++ b/_data/home.yml
@@ -21,29 +21,29 @@ project_entries:
     url: /tools
     desc: То что облегчает жизнь мне и возможно поможет вам
     
-  - title: Project 4
-    url: overview-post
-    desc: This project uses highlight markup, configured in _data/home.yml
-    highlight: WIP
+##  - title: Project 4
+##    url: overview-post
+##    desc: This project uses highlight markup, configured in _data/home.yml
+##   highlight: WIP
 
-  - title: Project 5
-    url: overview-post
-    desc: Moonwalk also has horizontal list (used in header and footer)
-    highlight: WIP
+##  - title: Project 5
+##    url: overview-post
+##    desc: Moonwalk also has horizontal list (used in header and footer)
+##    highlight: WIP
 
-  - title: Project 6
-    url: overview-post
-    desc: It also has a scalable vertical list (in case you need it)
+ ## - title: Project 6
+  ##  url: overview-post
+   ## desc: It also has a scalable vertical list (in case you need it)
 
 old_project_entries:
-  - title: Soopr
-    url: https://www.soopr.co
-    desc: Delight your readers - add beautiful share and like buttons easily to your websites 
-    highlight: NEW
+##  - title: Soopr
+ ##   url: https://www.soopr.co
+ ##   desc: Delight your readers - add beautiful share and like buttons easily to your websites 
+  ##  highlight: NEW
 
-  - title: Cookie
-    url: https://github.com/abhinavs/cookie
-    desc: An open source landing website with supporting pages and integrated blog
+##  - title: Cookie
+##    url: https://github.com/abhinavs/cookie
+##    desc: An open source landing website with supporting pages and integrated blog
 
   - title: Moonwalk
     url: https://github.com/abhinavs/moonwalk
@@ -86,8 +86,8 @@ misc_entries:
       - title: on Github
         url: https://github.com/abhinavs/moonwalk
 
-      - title: originally built for abhinav's homepage
-        url: https://www.abhinav.co
+    ##  - title: originally built for abhinav's homepage
+    ##    url: https://www.abhinav.co
 
       - title: this list is scalable and can be nested
         url: false
