--- a/_data/home.yml
+++ b/_data/home.yml
@@ -45,13 +45,13 @@ old_project_entries:
 ##    url: https://github.com/abhinavs/cookie
 ##    desc: An open source landing website with supporting pages and integrated blog
 
-  - title: Moonwalk
-    url: https://github.com/abhinavs/moonwalk
-    desc: A fast and minimalist Jekyll blog theme with clean dark mode
+##  - title: Moonwalk
+ ##   url: https://github.com/abhinavs/moonwalk
+ ##   desc: A fast and minimalist Jekyll blog theme with clean dark mode
 
-  - title: Humangous
-    url: https://www.humangous.co
-    desc: The better people know you, the better they collaborate
+##  - title: Humangous
+##    url: https://www.humangous.co
+##    desc: The better people know you, the better they collaborate
 
 footer_entries:
 ##  - title: abhinav's homepage
